Implement EPIC-04 STORY-04.5 jobs endpoints
